update header img with max-width for full responsiveness & prevent a horizontal scroll bar

--- a/css/index.css
+++ b/css/index.css
@@ -218,10 +218,8 @@ footer {
 .home .intro p {
   padding: 0 15px;
 }
-@media (max-width: 500px) {
-  .home .header-img-wrapper img {
-    width: 100%;
-  }
+.home .header-img-wrapper img {
+  max-width: 100%;
 }
 .home .space-images {
   display: flex;
