--- a/less/home-page.less
+++ b/less/home-page.less
@@ -18,10 +18,7 @@
 
   .header-img-wrapper {
     img {
-      @media @phone {
-        width: 100%;
-      }
-
+      max-width: 100%;
     }
   }
 
